# obelisk-launcher

./: Cargo.toml  INSTALL.md  README.md  build.rs  com.magnotec.obelisk.flatpak  obelisk-launcher.flatpak  test_gdk.rs
.antigravitycli/: 2a2691e9-8c65-46f2-ba2f-13e2f0b71970.json
.github/workflows/: flatpak.yml
data/: resources.gresource  resources.gresource.xml
flatpak/: com.magnotec.obelisk.desktop  com.magnotec.obelisk.metainfo.xml  com.magnotec.obelisk.yaml
repo/: summary  summary.idx
repo/refs/heads/appstream/: x86_64
repo/refs/heads/appstream2/: x86_64
repo/summaries/: 0a8c63c57d6e9ed74851b9240e3feb157cec0413f7a304d6822aadfdbb20bb52-034c189599078090676033cdf0d4deac22aab40cf6d9b42b80ab4225855a9ae9.delta
src/: config.rs  main.rs
src/backend/: mod.rs  playtime.rs
src/backend/auth/: account.rs  microsoft.rs
src/backend/download/: assets.rs  java.rs  manager.rs  mod.rs  modrinth.rs
src/backend/download/sources/: java.rs  minecraft.rs  mod.rs  modrinth.rs
src/backend/instance/: groups.rs  launcher.rs  manager.rs  mod.rs  modpack.rs  sharing.rs
src/backend/runtime/: java.rs  mod.rs  versions.rs
src/frontend/: app.rs  mod.rs  utils.rs
src/frontend/dialogs/: mod.rs
src/frontend/dialogs/instance/: add.rs  components.rs  editor.rs  icon_chooser.rs  mod.rs  mod_loader.rs  sharing.rs
src/frontend/dialogs/system/: assets.rs  java.rs  (+5 more)
src/frontend/utils/: file.rs  format.rs  mod.rs  popover.rs  version.rs  version_selector.rs
src/frontend/views/: account.rs  assets.rs  discover.rs  library.rs  mod.rs  playtime.rs  settings.rs  sidebar.rs
(+12 files in other folders)
