[package]
name = "obelisk"
version = "0.5.0"
edition = "2021"

[dependencies]
relm4 = { version = "0.9", features = ["libadwaita"] }
adw = { package = "libadwaita", version = "0.7", features = ["v1_7"] }
gtk = { package = "gtk4", version = "0.9", features = ["v4_14"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

directories = "5.0"
zip = "2.2"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rayon = "1.10"
urlencoding = "2.1"
toml = "0.8"
uuid = { version = "1.23.0", features = ["v4"] }
sha1 = "0.11.0"
sha2 = "0.11.0"
base64 = "0.22.1"
flate2 = "1.1.9"
hex = "0.4.3"
walkdir = "2.5"
fastnbt = "2.6.1"


